--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,14 +7,17 @@
           <br>
           <br>
           <br>
-          <br>
-          <br>
           <app-color></app-color>
+          <br>
+          <br>
+          <br>
+          <app-customer></app-customer>
+          <br>
+          <br>
+          <app-rental></app-rental>
       </div>
-
       <div class="col-md-9">
-        <app-car></app-car>
-          <router-outlet></router-outlet>
+        <router-outlet></router-outlet>
       </div>
   </div>
 
