--- a/src/app/components/brand/brand.component.html
+++ b/src/app/components/brand/brand.component.html
@@ -1,16 +1,9 @@
-<div *ngIf="dataLoaded==false" class="spinner-border text-success" role="status">
-  <span class="visually-hidden">Loading...</span>
-</div>
+<ul class="list-group">
+  <li [class]="getAllBrandClass()" routerLink = "/cars">Tüm ürünler</li>
+  <li (click)="setCurrentBrand(brand)" 
+  routerLink = "/cars/brand/{{brand.brandId}}"
+  *ngFor="let brand of brands" 
+  [class]="getCurrentBrandClass(brand)">{{brand.brandName}}</li>
+</ul>
 
-<table *ngIf="dataLoaded==true" class="table">
-  <thead>
-      <tr>
-          <th>Id</th>
-          <th>Marka</th>
-      </tr>
-  </thead>
-  <tr *ngFor="let brand of brands">
-      <td>{{ brand.brandId }}</td>
-      <td>{{ brand.brandName }}</td>
-  </tr>
-</table>
+<h5 *ngIf="currentBrand">{{currentBrand.brandName}} seçtiniz</h5>
