--- a/src/app/components/car/car.component.html
+++ b/src/app/components/car/car.component.html
@@ -1,6 +1,17 @@
 <div *ngIf="dataLoaded==false" class="spinner-border text-success" role="status">
     <span class="visually-hidden">Loading...</span>
-  </div>
+</div>
+<div class="mb-3">
+    <label for="exampleFormControlInput1"
+    class="form-label">Araba ara</label>
+    <input type="text" [(ngModel)]="filterText" 
+    class="form-control" id="filterText" 
+    placeholder="arama ifadesi giriniz">
+</div>
+
+<div *ngIf="filterText" class="alert alert-success">
+    {{filterText}} aradınız
+</div>
 
 <table *ngIf="dataLoaded==true" class="table">
     <thead>
@@ -13,7 +24,7 @@
             <th>Açıklama</th>
         </tr>
     </thead>
-    <tr *ngFor="let car of cars">
+    <tr *ngFor="let car of cars | filterPipe:filterText">
         <td>{{ car.carId }}</td>
         <td>{{ car.brandName }}</td>
         <td>{{ car.colorName }}</td>
