--- a/src/app/components/customer/customer.component.html
+++ b/src/app/components/customer/customer.component.html
@@ -1,1 +1,18 @@
-<p>customer works!</p>
+<div *ngIf="dataLoaded==false" class="spinner-border text-success" role="status">
+    <span class="visually-hidden">Loading...</span>
+  </div>
+
+<table *ngIf="dataLoaded==true" class="table">
+    <thead>
+        <tr>
+            <th>Id</th>
+            <th>Kullanıcı Id</th>
+            <td>Şirket adı</td>
+        </tr>
+    </thead>
+    <tr *ngFor="let customer of customers">
+        <td>{{ customer.customerId }}</td>
+        <td>{{ customer.userId }}</td>
+        <td>{{customer.companyName}}</td>
+    </tr>
+</table>
