--- a/src/app/components/car/car.component.html
+++ b/src/app/components/car/car.component.html
@@ -31,5 +31,6 @@
         <td>{{ car.modelYear }}</td>
         <td>{{ car.dailyPrice }} ₺</td>
         <td>{{ car.description }}</td>
+        <td><button type="button" class="btn btn-outline-info" routerLink="/cars/carDetail/{{car.carId}}">Detay</button></td>
     </tr>
 </table>
